--- a/po/main/SABnzbd.pot
+++ b/po/main/SABnzbd.pot
@@ -12,7 +12,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 7bit\n"
-"POT-Creation-Date: 2017-04-03 12:51+W. Europe Daylight Time\n"
+"POT-Creation-Date: 2017-04-03 15:24+W. Europe Daylight Time\n"
 "Generated-By: pygettext.py 1.5\n"
 
 
@@ -3294,7 +3294,7 @@ msgid "Certificate verification"
 msgstr ""
 
 #: sabnzbd/skintext.py:546
-msgid "Default: when SSL is enabled, verify the identity of the server using its certificates. Strict: verify and enforce matching hostname."
+msgid "Minimal: when SSL is enabled, verify the identity of the server using its certificates. Strict: verify and enforce matching hostname."
 msgstr ""
 
 #: sabnzbd/skintext.py:547 # sabnzbd/skintext.py:782 # sabnzbd/skintext.py:895
