--- a/README.mkd
+++ b/README.mkd
@@ -1,14 +1,5 @@
-Release Notes  -  SABnzbd 2.0.0RC3
+Release Notes  -  SABnzbd 2.0.0
 =========================================================
-
-## Bugfixes since RC2
-- SABYenc incorrectly gave CRC errors on some articles, fixed in SABYenc v3.0.2
-- par2cmdline would fail to repair jobs with split posts (.001, etc)
-- The insecure Certificate Verification level 'Default' is now called 'Minimal'
-- Show warning if job is paused because it appears cloaked
-- Fixed QuickCheck renaming issues
-- Unexpected characters in CRC part of an article could crash the Decoder
-
 
 ## New in 2.0.0: SABYenc
 - To improve SABnzbd's performance on systems where CPU power is limiting
@@ -32,9 +23,10 @@ Release Notes  -  SABnzbd 2.0.0RC3
   https://sabnzbd.org/wiki/installation/multicore-par2
 - Post-processing scripts now get additional job information via SAB environment
   variables. https://sabnzbd.org/wiki/scripts/post-processing-scripts
-- Certificate Validation set to Strict for newly added newsservers
+- Certificate Validation set to 'Strict' for newly added newsservers
+  The insecure Certificate Verification level 'Default' is now called 'Minimal'.
   In case of problems, see: https://sabnzbd.org/certificate-errors
-- Removed Secondary Web Interface option
+- Removed Secondary Web Interface option.
 
 ## Smaller changes/improvements in 2.0.0
 - Schedule items can now be enabled and disabled
@@ -48,12 +40,16 @@ Release Notes  -  SABnzbd 2.0.0RC3
 
 ## Bug fixes in 2.0.0
 - Malformed articles could break the Downloader
+- Unexpected characters in CRC part of an article could crash the Decoder
 - Retry ADMIN-data saving 3x before giving error
 - Checking for encryption during downloading could fail
 - QuickCheck could crash when renaming already renamed files
 - `skip_dashboard` set to 1 by default in `fullstatus` API-call
 - Top-only switch now really only downloads top job
 - Unblock Server button did not work
+- par2cmdline would fail to repair jobs with split posts (.001, etc)
+- Fixed QuickCheck renaming issues
+- Show warning if job is paused because it appears cloaked
 - Linux: Warn in case encoding is not set to UTF-8
 - Windows: Incomplete folders would sometimes end in a dot
 
