--- a/po/nsis/da.po
+++ b/po/nsis/da.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-03-18 21:42+0000\n"
-"PO-Revision-Date: 2017-03-14 16:11+0000\n"
-"Last-Translator: Rene <Unknown>\n"
+"PO-Revision-Date: 2017-04-10 11:28+0000\n"
+"Last-Translator: Safihre <safihre@sabnzbd.org>\n"
 "Language-Team: Danish <da@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-03-19 06:37+0000\n"
-"X-Generator: Launchpad (build 18332)\n"
+"X-Launchpad-Export-Date: 2017-04-14 05:48+0000\n"
+"X-Generator: Launchpad (build 18352)\n"
 
 #: NSIS_Installer.nsi:473
 msgid "Show Release Notes"
@@ -38,7 +38,7 @@ msgid ""
 "The installation directory has changed (now in \"Program Files\"). \\nIf you "
 "run SABnzbd as a service, you need to update the service settings."
 msgstr ""
-"Installationsmappen er ændret (nu i  \"Program Files \"). \\Hvis du kører "
+"Installationsmappen er ændret (nu i  \"Program Files \"). \\nHvis du kører "
 "SABnzbd som en tjeneste, skal du opdatere tjenesteindstillingerne."
 
 #: NSIS_Installer.nsi:483
