Update text files for 2.1.0Beta1

--- a/README.mkd
+++ b/README.mkd
@@ -1,28 +1,12 @@
-Release Notes  -  SABnzbd 2.0.1
+Release Notes  -  SABnzbd 2.1.0 Beta 1
 =========================================================
 
-## Changes since 2.0.0
-- No longer change ports if the configured port is not available during startup.
-- 'Proof' files also ignored when Ignore Samples is enabled.
-- Redundant SFV and RAR checks no longer performed if par2 verification failed.
-- More repair/unpack info is retained in the History information.
-- Windows: remove option to start SABnzbd from installer, it would start the
-  program as administrator.
-
-## Bugfixes since 2.0.0
-- Some users experienced slower download speeds.
-- Revert changes to handling of missing articles introduced in 2.0.0 that
-  turned out to be slow for some users.
-- Missing first par2-file would cause repair to be skipped.
-- Better handling of 7zip unpacking.
-- Log X-Forwarded-For of API calls and logins.
-- Handle more URLGrabber exceptions.
-- Command-line parameters were not listed correctly.
-- Queue-finish-action picker in Glitter more stable.
-- Custom Pause interpreter in Glitter more reliable.
-- Pre-check would fail if download was on SMBv3 share.
-- Windows: NZB-icon association lost sometimes.
-- Windows: Unrar could fail on some archives containing very long paths.
+## Changes since 2.0.1
+- Windows-only: Will now use MultiPar for verification and repair. MultiPar uses
+  the latest optimizations, multiple cores and the GPU (if available), resulting in
+  repairs often being twice as fast.
+  Created by Yutaka Sawada (Windows only): http://hp.vector.co.jp/authors/VA021385/
+- macOS: Updated bundled OpenSSL to 1.0.2k, enabeling TLS v1.1 and v1.2.
 
 ## Upgrading from 0.7.x and older
 - Finish queue
