--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -64,15 +64,15 @@ Windows
 
 Essential modules
     cheetah-2.0.1+          use "pip install cheetah"
-    par2cmdline >= 0.4      http://parchive.sourceforge.net/
-                            Note: https://sabnzbd.org/wiki/configuration/2.0/switches#par2cmdline
-                            And: https://sabnzbd.org/wiki/installation/multicore-par2
+    par2cmdline >= 0.4      https://github.com/Parchive/par2cmdline/releases
+                            See also: https://sabnzbd.org/wiki/installation/multicore-par2
     unrar >= 5.00+          http://www.rarlab.com/rar_add.htm
 
 Optional modules
     unzip >= 6.00           http://www.info-zip.org/
     7zip >= 9.20            http://www.7zip.org/
-    sabyenc == 3.0.2        use "pip install sabyenc" - https://sabnzbd.org/sabyenc
+    sabyenc == 3.0.2        use "pip install sabyenc"
+                            More information: https://sabnzbd.org/sabyenc
     openssl >= 1.0.0        http://www.openssl.org/
                             v0.9.8 will work, but limits certificate validation
     cryptography >= 1.0     use "pip install cryptography"
