--- a/po/nsis/de.po
+++ b/po/nsis/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-03-18 21:42+0000\n"
-"PO-Revision-Date: 2013-05-05 14:50+0000\n"
-"Last-Translator: shypike <Unknown>\n"
+"PO-Revision-Date: 2017-05-22 08:00+0000\n"
+"Last-Translator: larshuth <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-03-19 06:37+0000\n"
-"X-Generator: Launchpad (build 18332)\n"
+"X-Launchpad-Export-Date: 2017-05-23 06:10+0000\n"
+"X-Generator: Launchpad (build 18387)\n"
 
 #: NSIS_Installer.nsi:473
 msgid "Show Release Notes"
@@ -23,7 +23,7 @@ msgstr "Versionshinweise anzeigen"
 
 #: NSIS_Installer.nsi:475
 msgid "Start SABnzbd"
-msgstr ""
+msgstr "Starte SABnzbd"
 
 #: NSIS_Installer.nsi:477
 msgid "Support the project, Donate!"
@@ -38,6 +38,9 @@ msgid ""
 "The installation directory has changed (now in \"Program Files\"). \\nIf you "
 "run SABnzbd as a service, you need to update the service settings."
 msgstr ""
+"Das Installationsverzeichnis hat sich geändert (nun in \"Program Files\"). \\"
+"nWenn du SABnzbd als Service ausführst, musst du die Serviceeinstellungen "
+"anpassen."
 
 #: NSIS_Installer.nsi:483
 msgid "This will uninstall SABnzbd from your system"
